--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	</head>
 	<body>
 		<nav>
+			<div class="special_div" id="special_div">
+				<h1><img src="./src/img/img2/car.gif" alt="">购物车</h1>
+				<h2><img src="./src/img/img2/person.gif" alt="">个人中心</h2>
+				<h3><img src="./src/img/img2/denglu.gif" alt="">登陆</h3>
+			</div>
 			<div class="container top">
 				<div class="row">
 					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
@@ -44,7 +49,7 @@
 						<a href="javascript:;">云服务</a>
 					</div>
 					<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 last_a">
-						<a href="javascript;;"  class="last_a"><img src="./src/img/img/smallpic.jpg" alt=""></a>
+						<a href="javascript:;"  class="last_a" id="last_a"><img src="./src/img/img/smallpic.jpg" alt=""></a>
 					</div>
 				</div>
 			</div>
