首页初步完成

--- a/index.html
+++ b/index.html
@@ -179,6 +179,6 @@
 		<script src="dist/bootstrap.min.js"></script>
 		<script src="dist/swiper.min.js"></script>
 		<script src="dist/indexswiper.min.js"></script>
-		<script src="src/js/index.js"></script>
+		<script src="dist/index.min.js"></script>
 	</body>
 </html>
