注册页初步完成

--- a/login.html
+++ b/login.html
@@ -36,7 +36,11 @@
 				<div class="message_row2" id="message_row2">
 					<ul>
 						<input type="text" name="" id="" value="" class="first_input" placeholder="手机号码或邮箱"/>
-						<input type="text" name="" id="" value="" class="second_input" placeholder="密码"/>
+						<div class="message_row2_first_div" id="message_row2_first_div">
+							<input type="text" name="" id="message_row2_first_div_input" value="" class="second_input" placeholder="密码"/>
+							<span><img src="src/img/img2/notsee.jpg" alt="" id="message_row2_first_div_img"></span>
+						</div>
+						
 						<li class="message_row2_first_li"><a href="javascript:;" class="message_row2_first_li_a1">关于 OPPO 隐私政策</a><a href="javascript:;" class="message_row2_first_li_a2">忘记密码</a></li>
 						<input type="button" name="" id="" value="登陆" class="three_input"/>
 						<li class="message_row2_second_li"><a href="javascript:;">注册 OPPO 账号</a></li>
