--- a/register.html
+++ b/register.html
@@ -26,15 +26,24 @@
 		<div id="center" class="center">
 			<div id="center_div" class="center_div">
 				<div class="center_div_div">
-					国家/地区
-				</div><input type="text" name="" id="" value="" class="center_input1" id="center_input1"/>
+					<span>国家/地区</span>
+				</div>
+				<input type="text" name="" id="" value="中国" class="center_input1" id="center_input1"/>
 			</div>
 			<p class="center_first_p">成功注册账号后，国家/地区不可更改</p>
 			<input type="text" name="" id="" value="" placeholder="请输入手机号码或邮箱" class="center_input2" id="center_input2"/>
 			<input type="text" name="" id="" value="" placeholder="请输入验证码" class="center_input3" id="center_input3"/><input type="button" name="" id="" value="获取验证码" class="center_input7" id="center_input8"/>
-			<input type="text" name="" id="" value="" placeholder="请输入密码" class="center_input4" id="center_input4"/>
+			<div  id="center_div2" class="center_div2">
+				<input type="text" name="" value="" placeholder="请输入密码" class="center_input4" id="center_input4" />
+				<span id="center_div2_first_span" class="center_div2_first_span"><img src="src/img/img2/see.jpg" alt="" id="center_div2_img"></span>
+			</div>
+			
 			<p class="center_second_p">密码由6-16位数字、字母或符号组成、至少包含两种字符</p>
-			<input type="text" name="" id="" value="" placeholder="请再次输入密码" class="center_input5" id="center_input5"/>
+			<div  id="center_div3" class="center_div3">
+				<input type="text" name="" value="" placeholder="请再次输入密码" class="center_input5" id="center_input5"/>
+				<span id="center_div3_second_span" class="center_div3_second_span"><img src="src/img/img2/see.jpg" alt="" id="center_div3_img"></span>
+			</div>
+			
 			<input type="checkbox" name="" id="" value="" class="center_input8" id="center_input8"/><span>已阅读并同意 </span><a href="javascript:;">《OPPO 账号使用协议》</a>
 			<input type="button" name="" id="" value="立即注册" class="center_input6" id="center_input6"/>
 		</div>
@@ -46,5 +55,6 @@
 				&copy; 2005 - 2009 OPPO 版权所有 粤ICP备08130115号-1 联系方式：4001-666-888
 			</div>
 		</div>
+		<script src="dist/register.min.js"></script>
 	</body>
 </html>
