列表页初步完成

--- a/list.html
+++ b/list.html
@@ -75,7 +75,7 @@
 				<div class="swiper-slide"><img src="./src/img/img3/201903120903255c8708a5b7441.jpg" alt=""></div>
 				<div class="swiper-slide"><img src="./src/img/img3/201901151101125c3d57489fcac.jpg" alt=""></div>
 				<div class="swiper-slide"><img src="./src/img/img3/201902060902245c5a387450f6e.jpg" alt=""></div>
-				<div class="swiper-slide"><img src="./src/img/img3/201902270902285c75e52821670.jpg" alt=""></div>
+				<div class="swiper-slide"><img src="./src/img/img3/201902270902285c75e52821670.jpg" alt="" id="swiper-wrapper_img5" style="width: 450px;height: 450px;"></div>
 				<div class="swiper-slide"><img src="./src/img/img3/201810190910355bc9d9331cdec.jpg" alt=""></div>
 			</div>
 			<!-- 如果需要分页器 -->
@@ -88,6 +88,166 @@
 			<!-- 如果需要滚动条 -->
 			<div class="swiper-scrollbar"></div>
 		</div>
+		<div class="center">
+			<ul class="center_ul">
+				<li id="center_ul1"></li>
+				<li id="center_ul2"></li>
+				<li id="center_ul3"></li>
+			</ul>
+			<div class="center_div1" id="center_div1">
+				<img src="src/img/img3/phone21.jpg" alt="" class="center_img1">
+				<div class="center_div1_div">
+					<h1>R17 Pro</h1>
+					<h2>6G+128G ，超强闪充。</h2>
+					<!-- <ul class="center_div1_div_ul">
+						<li ></li>
+						<li></li>
+						<li></li>
+					</ul> -->
+					<h3>¥ 3699</h3>
+					<h4>立即购买</h4>
+				</div>
+			</div>
+			<div class="center_div2" id="center_div2">
+				<img src="src/img/img3/phone22.jpg" alt="" class="center_img2">
+				<div class="center_div2_div">
+					<h1>R17 Pro</h1>
+					<h2>8G+128G ，王者定制版。</h2>
+					<!-- <ul class="center_div2_div_ul">
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul> -->
+					<h3>¥ 4299</h3>
+					<h4>立即购买</h4>
+				</div>
+			</div>
+			<div class="center_div3" id="center_div3">
+				<img src="src/img/img3/phone23.jpg" class="center_img3">
+				<div class="center_div3_div">
+					<h1>R17 Pro</h1>
+					<h2>8G+128G ，超强夜拍</h2>
+					<!-- <ul class="center_div3_div_ul">
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul> -->
+					<h3>¥ 4299</h3>
+					<h4>立即购买</h4>
+				</div>
+			</div>			
+		</div>
+		<div class="center_2">
+			<img src="src/img/img3/banner1.jpg" alt="">
+		</div>
+		<div class="center_3">
+			<img src="src/img/img3/banner2.jpg" alt="">
+		</div>
+		<div id="img_div" class="img_div">
+			<div class="img_div_div3">
+				<img src="src/img/img3/banner3.jpg" alt="">
+			</div>
+			<div class="img_div_div4">
+				<img src="src/img/img3/banner4.jpg" alt="">
+			</div>
+			<div class="img_div_div5">
+				<img src="src/img/img3/banner5.jpg" alt="">
+			</div>
+			<div class="img_div_div6">
+				<img src="src/img/img3/banner6.jpg" alt="">
+			</div>
+			<div class="img_div_div7">
+				<img src="src/img/img3/banner7.jpg" alt="">
+			</div>
+		</div>
+		<div class="navigator">
+			<div class="navigator_div">
+				配件
+			</div>
+			<ul>
+				<li>推荐</li>
+				<li>数据线/适配器</li>
+				<li>耳机</li>
+				<li>保护壳</li>
+				<li>其他</li>
+			</ul>
+		</div>
+		<div class="special" id="special">
+			
+		</div>
+		<div class="super">
+			<div class="bottom">
+				<div class="container bottom1">
+					<div class="row">
+						<div class="col-lg-2 col-md-2 col-sm-2 bottom_in">
+							<dl>
+								<dt>推荐机型</dt>
+								<dd>R17 Pro</dd>
+								<dd>K1</dd>
+								<dd>R17</dd>
+								<dd>Find X</dd>
+								<dd>R15</dd>
+								<dd>A7</dd>
+								<dd>A5</dd>
+							</dl>
+						</div>
+						<div class="col-lg-2 col-md-2 col-sm-2 bottom_in">
+							<dl>
+								<dt>服务</dt>
+								<dd>以旧换新</dd>
+								<dd>服务网点查询</dd>
+								<dd>零配件价格查询</dd>
+								<dd>官方授权网店</dd>
+								<dd>预置软件公示</dd>
+								<dd>OPPO 服务政策</dd>
+							</dl>
+						</div>
+						<div class="col-lg-2 col-md-2 col-sm-2 bottom_in">
+							<dl>
+								<dt>关于我们</dt>
+								<dd>关于OPPO</dd>
+								<dd>OPPO管理层</dd>
+								<dd>新闻资讯</dd>
+								<dd>媒体资讯</dd>
+								
+								
+								<dd>加入我们</dd>
+								<dd>反馈安全问题</dd>
+							</dl>
+						</div>
+						<div class="col-lg-2 col-md-2 col-sm-2 bottom_in">
+							<dl>
+								<dt>商务合作</dt>
+								<dd>知识产权</dd>
+								<dd>开方平台</dd>
+								<dd>采购相关</dd>
+								<dd>政企服务</dd>
+							</dl>
+						</div>
+						<div class="col-lg-2 col-md-2 col-sm-2 bottom_in bottom_in2">
+							<dl>
+								<dt>在线服务</dt>
+								<dd class="first_dd">4001-666-888</dd>
+								<dd class="last_dd">24小时全国热线</dd>
+							</dl>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="super_bottom">
+				<div class="container bottom2">
+					<div class="row">
+						<div class="col-lg-8 col-md-8 col-sm-8 bottom_in">
+							<p>&copy; 2005 - 2009 OPPO 版权所有 粤ICP备08130115号-1 | 隐私政策 | 用户使用协议 | 联系方式：4001-666-888</p>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4 bottom_in3">
+							<p>关注我们</p>
+						</div>				
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		<script src="dist/jquery-1.11.3.js"></script>
 		<script src="dist/bootstrap.min.js"></script>
 		<script src="dist/swiper.min.js"></script>
